Add CSS styles for orders.html, and improve session attribute loading of orders

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -88,3 +88,17 @@ button{
     text-align: right;
 }
 
+.orders-table{
+    width: auto;
+    th {
+        text-align: left;
+        padding: 0 20px;
+        
+    }
+    td {
+        padding: 0 20px;
+        
+        
+    }
+}
+
