--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -12,7 +12,7 @@
     <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
     <h2>Your Orders</h2>
     <div>
-        <table>
+        <table class="orders-table">
             <thead>
                 <tr>
                     <th>Order ID</th>
@@ -28,14 +28,15 @@
                     <td th:text="${order.orderID}"></td>
                     <td th:text="${order.customer.username}"></td>
                     <td>
-                        <ul>
+                        <p th:each="cartItem : ${order.orderedItems}" th:text="${cartItem.product.productName} + '(Qty: ' + ${cartItem.productQuantity}+ ')'"></p>
+                        <!-- <ul>
                             <li th:each="cartItem : ${order.orderedItems}">
                                 <span
                                     th:text="${cartItem.product.productName} + '(Qty: ' + ${cartItem.productQuantity}+ ')'">
                                 </span>
-                                <!-- <span th:text="${cartItem.productSubtotal}"> </span> -->
+                                
                             </li>
-                        </ul>
+                        </ul> -->
                     </td>
 
                     <td th:text="${#dates.format(order.orderDate, 'yyyy-MM-dd')}"></td>
