Add a table showing top-ordered products of the application across all orders

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -102,3 +102,13 @@ button{
     }
 }
 
+.popular{
+    text-align: left;
+    th {
+        padding: 0 10px;
+    }
+    td {
+        padding: 0 10px;     
+    }
+}
+
