Add on-screen validation for login page
An error message will now be displayed onscreen when username or password does not match database records

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -112,3 +112,10 @@ button{
     }
 }
 
+.error-message p{
+    color: red;
+    /* background: white;
+    border-radius: 5px; */
+    width: auto;
+}
+
