Add validation for customer registration and product registration in main.js file
Move other JavaScript functions to main.js
Add styles to popular items table

--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add New Product</title>
     <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
+
 <body>
     <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
     <form method="POST" th:action="@{/product/add-product}">
-        <fieldset>
-            <label>Please enter the product name:</label><br>
-            <input type="text" name="productName" required ><br>
-            <label>Please enter the current available stock:</label><br>
-            <input type="number" name="stock" required ><br>
-            <label>Please enter a suitable image URL:</label><br>
-            <input type="text" name="imgURL" required ><br>
-            <label>Please enter the price:</label><br>
-            <input type="text" name="price" required ><br>
-            <button type="submit"> Add To Database </button>
-        </fieldset>
+
+        <div class="form-group">
+            <label for="productName">Product Name:</label>
+            <input type="text" class="form-control" id="productName" name="productName" required>
+        </div>
+        <div class="form-group">
+            <label for="availableStock">Available Stock:</label>
+            <input type="number" class="form-control" id="stock" name="stock" required min="0">
+        </div>
+        <div class="form-group">
+            <label for="imageURL">Image URL:</label>
+            <input type="url" class="form-control" id="imgURL" name="imgURL" required>
+        </div>
+        <div class="form-group">
+            <label for="price">Price:</label>
+            <input type="number" class="form-control" id="price" name="price" required min="0.01" step="0.01">
+        </div>
+        <button type="submit">Register Product</button>
+        <div id="validation-message"></div>
+
     </form>
 </body>
+
 </html>
