--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -98,12 +98,24 @@ button{
     td {
         padding: 0 20px;
         
-        
+    }
+    tr {
+        border: 1px black solid;
     }
 }
 
 .popular{
     text-align: left;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    background: #ffffd1;
+    border-radius: 10px;
+
+    h3{
+        padding: 0 10px;
+    }
     th {
         padding: 0 10px;
     }
@@ -119,3 +131,6 @@ button{
     width: auto;
 }
 
+.form-group {
+    margin: 10px 0;
+}
