--- a/src/main/resources/templates/registerCustomer.html
+++ b/src/main/resources/templates/registerCustomer.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer Registration</title>
     <link rel="stylesheet" th:href="@{/styles.css}">
 </head>
+
 <body>
     <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
     <h1>Please provide your details:</h1>
-    <form method="POST" th:action="@{/customer/registration}" >
-        <fieldset>
-            <label>Please enter your username:</label><br>
-            <input type="text" name="username" required ><br>
-            <label>Please enter your password:</label><br>
-            <input type="password" name="password" required ><br>
-            <label>Please enter your email address:</label><br>
-            <input type="text" name="email" required ><br>
-            <label>Please enter your shipping address:</label><br>
-            <input type="text" name="address" required ><br>
-            <label>Please enter your full name:</label><br>
-            <input type="text" name="fullName" required ><br>
-            <label>Please enter your credit card number:</label><br>
-            <input type="text" name="cardNumber" ><br>
-            
-            <button type="submit"> Confirm </button>
-        </fieldset>
+    <form method="POST" th:action="@{/customer/registration}">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" class="form-control" id="username" name="username" required>
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" class="form-control" id="password" name="password" required minlength="8">
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="address">Address:</label>
+            <input type="text" class="form-control" id="address" name="address" required>
+        </div>
+        <div class="form-group">
+            <label for="fullName">Full Name:</label>
+            <input type="text" class="form-control" id="fullName" name="fullName" required>
+        </div>
+        <div class="form-group">
+            <label for="cardNumber">Card Number:</label>
+            <input type="text" class="form-control" id="cardNumber" name="cardNumber" required>
+        </div>
+        <button type="submit">Register</button>
     </form>
+    <div id="validation-message"></div>
+    <script type="text/javascript" th:src="@{/main.js}"></script>
 </body>
+
 </html>
