--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -40,7 +40,7 @@
 
     <form method="GET" th:action="@{/product/dashboard}">
 
-        <button type="submit"> Back To Dashboard </button>
+        <button type="submit" class="button-4"> Back To Dashboard </button>
 
     </form>
     <script type="text/javascript" th:src="@{/main.js}"></script>
