--- a/src/main/resources/templates/addProduct.html
+++ b/src/main/resources/templates/addProduct.html
@@ -10,28 +10,30 @@
 
 <body>
     <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
-    <form method="POST" th:action="@{/product/add-product}">
+    <div class="main">
+        <form method="POST" th:action="@{/product/add-product}">
+            <h2>Register new product</h2>
+            <div class="form-group">
+                <label for="productName">Product Name:</label><br>
+                <input type="text" class="form-control" id="productName" name="productName" required>
+            </div>
+            <div class="form-group">
+                <label for="availableStock">Available Stock:</label><br>
+                <input type="number" class="form-control" id="stock" name="stock" required min="0">
+            </div>
+            <div class="form-group">
+                <label for="imageURL">Image URL:</label><br>
+                <input type="url" class="form-control" id="imgURL" name="imgURL" required>
+            </div>
+            <div class="form-group">
+                <label for="price">Price:</label><br>
+                <input type="number" class="form-control" id="price" name="price" required min="0.01" step="0.01">
+            </div>
+            <button type="submit" class="button-4">Register Product</button>
+            <div id="validation-message"></div>
+        </form>
+    </div>
 
-        <div class="form-group">
-            <label for="productName">Product Name:</label>
-            <input type="text" class="form-control" id="productName" name="productName" required>
-        </div>
-        <div class="form-group">
-            <label for="availableStock">Available Stock:</label>
-            <input type="number" class="form-control" id="stock" name="stock" required min="0">
-        </div>
-        <div class="form-group">
-            <label for="imageURL">Image URL:</label>
-            <input type="url" class="form-control" id="imgURL" name="imgURL" required>
-        </div>
-        <div class="form-group">
-            <label for="price">Price:</label>
-            <input type="number" class="form-control" id="price" name="price" required min="0.01" step="0.01">
-        </div>
-        <button type="submit">Register Product</button>
-        <div id="validation-message"></div>
-
-    </form>
 </body>
 
 </html>
