--- a/src/main/resources/templates/registerCustomer.html
+++ b/src/main/resources/templates/registerCustomer.html
@@ -10,35 +10,39 @@
 
 <body>
     <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
-    <h1>Please provide your details:</h1>
-    <form method="POST" th:action="@{/customer/registration}">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" class="form-control" id="username" name="username" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" class="form-control" id="password" name="password" required minlength="8">
-        </div>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-            <label for="address">Address:</label>
-            <input type="text" class="form-control" id="address" name="address" required>
-        </div>
-        <div class="form-group">
-            <label for="fullName">Full Name:</label>
-            <input type="text" class="form-control" id="fullName" name="fullName" required>
-        </div>
-        <div class="form-group">
-            <label for="cardNumber">Card Number:</label>
-            <input type="text" class="form-control" id="cardNumber" name="cardNumber" required>
-        </div>
-        <button type="submit">Register</button>
-    </form>
-    <div id="validation-message"></div>
+
+    <div class="main">
+        <h2>Please provide your details:</h2>
+        <form method="POST" th:action="@{/customer/registration}">
+            <div class="form-group">
+                <label for="username">Username:</label><br>
+                <input type="text" class="form-control" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label><br>
+                <input type="password" class="form-control" id="password" name="password" required minlength="8">
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label><br>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="address">Address:</label><br>
+                <input type="text" class="form-control" id="address" name="address" required>
+            </div>
+            <div class="form-group">
+                <label for="fullName">Full Name:</label><br>
+                <input type="text" class="form-control" id="fullName" name="fullName" required>
+            </div>
+            <div class="form-group">
+                <label for="cardNumber">Card Number:</label><br>
+                <input type="text" class="form-control" id="cardNumber" name="cardNumber" required>
+            </div>
+            <button type="submit" class="button-4">Register</button>
+        </form>
+        <div id="validation-message"></div>
+    </div>
+
     <script type="text/javascript" th:src="@{/main.js}"></script>
 </body>
 
