--- a/src/main/resources/templates/customerLogin.html
+++ b/src/main/resources/templates/customerLogin.html
@@ -11,8 +11,9 @@
 <body>
     <h1 class="page-title"><a th:href="@{/}">SNACK SHACK</a></h1>
     <div class="main">
-        <form method="POST" th:action="@{/customer/login-customer}">
+        <form method="POST" th:action="@{/login}">
             <h2>Login</h2>
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <div class="form-group">
                 <label for="username">Please enter your username:</label><br>
                 <input type="text" class="form-control" id="username" name="username" required>
